2014-09-08  Andreas Schlegel  <andi at sojamo.de>

      * src controlP5.Icon:
      adding Icon class, acts like a button; can be used with images and font-icons
      from "Font Awesome".
      
      * src controlP5.Button:
      when theButton acts as a switch (setSwitch(true)), the corresponding
      method inside a sketch should use type boolean as argument instead of float;
      a java.lang.IllegalArgumentException will be thrown in case of a float argument


2014-08-28  Andreas Schlegel  <andi at sojamo.de>

      * src controlP5.Background:
      adding Background class, a convenience class for grouping controllers with 
      the top bar disabled by default.  
	

2014-07-21  Andreas Schlegel  <andi at sojamo.de>

      * src controlP5.Textfield:
      making use of a graphics buffer now, simplifies cursor position calculation and 
      prevents from throwing an ArrayIndexOutOfBoundsException which could occasionally 
      happen with previous versions.
       
      
2014-07-17  Andreas Schlegel  <andi at sojamo.de>
      * version 2.2.1
      
      * removing PVector dependencies
      
      * removing all deprecated methods
      
      * src controlP5.ListBox, controlP5.DropdownList:
      Due to changes to and deprecation of DropdownList and ListBox, both share the same
      source code as ScrollableList. Consequently some functionality got lost though this
      should be marginal. In case of any issues occuring due to these changes, please
      inform the author. In any case use ScrollableList instead of DropdownList and ListBox.
      The major benefit of using a ScrollableList is that an item is now of type Map and
      therefore is not limited (as it was the case before) to the implementation of a 
      ListBoxItem and hence is more flexible as data container.
      Do note that ListBox, DropdownList and ScrollableList do extend Controller, 
      not ControllerGroup
      
      
2014-04-27  Andreas Schlegel  <andi at sojamo.de>