@@ -15,11 +15,11 @@
 	<property name="author"                     value="Andreas Schlegel"/>	
 	<property name="copyright"                  value="(c) 2006-2015"/>
 	<property name="libraryName"                value="controlP5"/>
-	<property name="versionNumber"              value="2.2.4"/>
+	<property name="versionNumber"              value="2.2.5"/>
 	<property name="yourLink"                   value="http://www.sojamo.de" />
 	<property name="keywords"                   value="gui, ui, controller, interface, user interface" />
 	<property name="tested:platform"            value="osx, windows, linux" />
-	<property name="tested:processingVersion"  	value="2.2.3" />	
+	<property name="tested:processingVersion"  	value="2.2.1" />	
 	<property name="tested:dependencies"        value="none" />
 	<property name="source:host"                value="github" />
 	<property name="source:url"                 value="https://github.com/sojamo/controlp5" />
